# microlensing_tomopm

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  rest-api.html
custom_code/: models.py
custom_code/management/commands/: convert_targets.py
custom_code/templates/custom_code/partials/: classification_data.html
custom_code/templatetags/: custom_extras.py
microlensing_tomopm/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: index.html  priority_management.html
templates/tom_common/: base.html  index.html  navbar_content.html
templates/tom_dataproducts/partials/: classification.html  gaia.html
templates/tom_targets/: target_detail.html
templates/tom_targets/partials/: aladin_finderchart.html  aladin_skymap.html  target_data.html
